# AgentCost.ai

./: README.md  architecture.md
.claude/: settings.json
agent-cost-forecaster/: .env.example  README.md  pyproject.toml  requirements.txt
agent-cost-forecaster/agent_cost_forecaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-cost-forecaster/app/: cli.py  db.py  executor.py  logger.py  pricing.py  tool_registry.py
agent-cost-forecaster/config/: agent_config.yaml
agent-cost-forecaster/data/: seed_templates.yaml
agent-cost-forecaster/scripts/: generate_tasks.py
docs/: 01-overview.md  02-sdk-integration.md  03-community-network.md  04-mvp-scope.md  05-architecture.md  06-claude-code-runtime.md  07-execution-logging.md  08-profiling-calibration.md  09-prediction-budget.md  10-modules.md  11-data-model.md  12-api.md  13-cli.md  14-roadmap.md  15-design-principles.md  README.md
token-count-demo/: README.md  requirements.txt
token-count-demo/token_count_demo/: __init__.py  cases.py  client.py  main.py
